Wed Mar  6 16:17:20 1996  Richard Basch  <basch@lehman.com>

	* dumpv4.c: The V4 master key & schedule was never initialized,
	so the dump created by dump_v4db was garbage.	Read the V4
	master key from /.k or prompt for the V4 master key password.
	  If there is no V4-salt key in the database, but there is a DES
	key, include it in the V4 dump, in case it is merely a random 
	service key for which there is no associated password.
	  Skip over K/M in the V5 database (use the entered V4 master key).
	  Both krbtgt and afs keys often have domain-qualifed instances.

Tue Mar  5 12:18:22 1996  Richard Basch  <basch@lehman.com>

	* dump.c: POSIX locking requires that the file be opened read-write.

Mon Feb 26 22:42:09 1996  Mark Eichin  <eichin@cygnus.com>

	* kdb5_edit.c: new command line option -f stashfile.
	* kdb5_edit.M: document stashfile option.

Mon Feb 26 22:13:45 1996  Mark Eichin  <eichin@cygnus.com>

	* dump.c (process_k5beta_record): since V4 salt type has no data
 	either, only set key_data_ver to 1 for data_type 0 with 0-length
 	salt. Also, don't include alternate key if akey has all-zero type
	and length in both fields.

Sat Feb 24 04:02:18 1996  Mark W. Eichin  <eichin@cygnus.com>

	* dump.c (process_k5beta_record): encrypted keys used to have 4
	byte lengths in MSB order, need to convert to 2 byte LSB order
	lengths before storing. Handle primary key and alternate key.

Fri Feb 23 18:44:10 1996  Mark Eichin  <eichin@cygnus.com>

	* kdb5_edit.c (kdb5_edit_Init): set manual_mkey for testing with -P

Wed Feb 14 09:52:18 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (enter_master_key, set_dbname_help): If master key
		enctype is unknown, set to DEFAULT_KDC_ENCTYPE.

Tue Feb 13 16:08:07 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_edit.c (extract_v4_srvtab): krb5_dbekd_decrypt_key_data
		takes krb5_key_data *, not **.

Tue Jan 30 18:28:57 1996  Mark Eichin  <eichin@cygnus.com>
